Work on filtering and location searching capabilities